--- a/src/sass-css/styles.sass
+++ b/src/sass-css/styles.sass
@@ -11,6 +11,7 @@
   left: 15%
   bottom: 20%
   color: white
+
 .overlay
   width: 100%
   height: 100%
@@ -18,3 +19,6 @@
   background: black
   opacity: 0.4
   z-index: 1
+
+.carousel
+  margin-bottom: 20px
